fix the double scroll

--- a/identity/view/css/style.css
+++ b/identity/view/css/style.css
@@ -111,7 +111,6 @@ main {
 .modal-lg {
     width: 800px;
 }
-.viewDeviceContainer .modal-lg {width: 100%;}
 .viewDeviceContainer .title-header {
     padding: 20px;
     border-bottom: 1px solid #e5e5e5;
